Worked on new models testing diffrent combos. Added sucessful to competition instructions.

--- a/Competition_Instructions_SP.Rmd
+++ b/Competition_Instructions_SP.Rmd
@@ -506,7 +506,11 @@ xreg_af24_temp_for<-as.matrix(data.frame(fourier(ts_load, K=c(2,24), h=n_for+1),
 AF24_temp_jul_for<-forecast(AF24_temp_jul,
                       xreg=xreg_af24_temp_for,
                       h=n_for+1)
-
+# Weighted average of ETS and SN forecasts
+combined_forecast23 <- (0.5 * ETS_jul$mean + 0.5 * SN_jul_for$mean)
+test_f <- data.frame(date=date_for,load=round(combined_forecast23,digits=0))
+colnames(test_f)[1] <- "date"
+write.csv(test_f , file="./Output/submission_test.csv", row.names = FALSE)
 
 ```
 
@@ -571,6 +575,11 @@ write.csv(STL_for, file="./Output/submission_stl.csv", row.names = FALSE)
 #creating A+F+temp
 AF24_temp_for <- data.frame(date=date_for,load=round(AF24_temp_jul_for$mean,digits=0))
 write.csv(STL_for, file="./Output/submission_af24_temp.csv", row.names = FALSE)
+
+#creating ETS +SN csv
+test_f <- data.frame(date=date_for,load=round(combined_forecast23,digits=0))
+colnames(test_f)[1] <- "date"
+write.csv(test_f , file="./Output/submission_test.csv", row.names = FALSE)
 ```
 
 ## SUBMIT FORECAST TO KAGGLE
