--- a/PowarWhatley_ENV797_A08_Competition.Rmd
+++ b/PowarWhatley_ENV797_A08_Competition.Rmd
@@ -1,12 +1,14 @@
 ---
-title: "TSA: Forecasting Competition Instructions"
+title: 'TSA: Forecasting Competition Instructions'
 author: "Sai Powar & Vinny Whatley"
 date: "03/20/2024"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 always_allow_html: true
-editor_options: 
+editor_options:
   chunk_output_type: console
-  markdown: 
+  markdown:
     wrap: sentence
 ---
 
